Use better method.